--- a/P1.ipynb
+++ b/P1.ipynb
@@ -243,6 +243,29 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom Helpers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_hsv(img):\n",
+    "    \"\"\"Converts given RGB img to hsv format\"\"\"\n",
+    "    return cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "def calculate_hue_saturation_histogram(hsv_img):\n",
+    "    \"\"\"Calculates the histogram for the hue and saturation channels in an HSV image\"\"\"\n",
+    "    return cv2.calcHist([hsv_img], [0, 1], None, [180, 256], [0, 180, 0, 256])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -282,6 +305,49 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hue Range for Colour Thresholding\n",
+    "\n",
+    "To determine the range of hues that needs to be thresholded, 2D histograms will be used.\n",
+    "\n",
+    "The images will first be converted to HSV format, then a histogram will be generated based on the hue and saturation channels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = mpimg.imread(\"test_images/solidYellowCurve2.jpg\")\n",
+    "hsv = convert_to_hsv(image)\n",
+    "# plt.imshow(hsv)  # shows that the image is indeed converted as imshow renders HSV channels as RGB channels\n",
+    "histogram = calculate_hue_saturation_histogram(hsv)\n",
+    "\n",
+    "plt.imshow(histogram, interpolation = 'nearest')\n",
+    "plt.xlabel(\"Saturation\")\n",
+    "plt.ylabel(\"Hue\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.imshow(image)\n",
+    "\n",
+    "# Note: 0 <= hue <= 180, 0 <= saturation <= 255"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Pipeline\n",
+    "\n",
+    "The actual pipeline using parameters found from steps above in this section."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -289,8 +355,20 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
-    "# then save them to the test_images_output directory."
+    "\n",
+    "\n",
+    "# Yanqi Made Pipeline, hope it works :fingers-crossed:\n",
+    "\n",
+    "# Colour thresholding (yellow and white) - histograms to adjust the hue range\n",
+    "cv2.cvtColor(bgr_img, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "# Conversion to greyscale\n",
+    "# Smoothing\n",
+    "# Canny edge detection\n",
+    "# Region of interest filtering\n",
+    "# Line segment detection\n",
+    "# Classification into left and right boundaries\n",
+    "# Line fitting"
    ]
   },
   {
@@ -505,7 +583,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ece495_a1",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +597,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d8fa7fe7173a64db132746501f00baf746f95900d8ef8f98ab4a176681d777e0"
+   }
   }
  },
  "nbformat": 4,
