Add draft pipeline step 1

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -458,12 +458,27 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Yanqi Made Pipeline, hope it works :fingers-crossed:\n",
     "\n",
-    "# Colour thresholding (yellow and white) - histograms to adjust the hue range\n",
-    "cv2.cvtColor(bgr_img, cv2.COLOR_BGR2HSV)\n",
+    "FILE_PATH = \"test_images/solidYellowCurve.jpg\"\n",
+    "raw_image = mpimg.imread(FILE_PATH)\n",
+    "hsv_image = convert_to_hsv(raw_image)\n",
+    "\n",
+    "# Colour thresholding (yellow and white)\n",
+    "# Thresholds in the order: H, S, V\n",
+    "WHITE_LOW_THRESHOLD = (0, 0, 200) \n",
+    "WHITE_HIGH_THRESHOLD = (180, 50, 255)\n",
+    "YELLOW_LOW_THRESHOLD = (10, 110, 200)\n",
+    "YELLOW_HIGH_THRESHOLD = (25, 140, 255)\n",
+    "\n",
+    "white_mask = cv2.inRange(hsv_image, WHITE_LOW_THRESHOLD, WHITE_HIGH_THRESHOLD)\n",
+    "yellow_mask = cv2.inRange(hsv_image, YELLOW_LOW_THRESHOLD, YELLOW_HIGH_THRESHOLD)\n",
+    "\n",
+    "combined_mask = cv2.bitwise_or(white_mask, yellow_mask)\n",
+    "colour_thresholded_image = cv2.bitwise_and(hsv_image, hsv_image, mask=combined_mask)\n",
+    "\n",
+    "plt.imshow(convert_to_rgb(colour_thresholded_image))\n",
+    "plt.plot()\n",
     "\n",
     "# Conversion to greyscale\n",
     "# Smoothing\n",
