Add function notes

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -520,7 +520,7 @@
    ],
    "source": [
     "def image_pipeline(file_path):\n",
-    "    # Yanqi Made Pipeline, hope it works :fingers-crossed:\n",
+    "    \"\"\"Yanqi-made image processing pipeline, hope it works :fingers-crossed:\"\"\"\n",
     "\n",
     "    raw_image = mpimg.imread(file_path)\n",
     "    hsv_image = convert_to_hsv(raw_image)\n",
