Update the histogram commentary

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -437,7 +437,9 @@
    "source": [
     "From the histograms produced by the code above, we can see that the whites are usually at around 50 saturation or less, however the exact distribution seems to vary by image.\n",
     "\n",
-    "The yellows at around hue of 20 are distributed widely across saturation levels. By comparing the white curve images and the yellow curve images, the grass seems to be around 100 in saturation whereas the lane markings produce yellow at about 110 - 120 saturation."
+    "The yellows are at around a hue of 100. They are difficult to see, but there is a slightly lighter area at that location at around a saturation of 60 - 70. However, the yellow at such low saturation come from the hills, and it isn't apparent what the bright yellow's saturation is.\n",
+    "\n",
+    "The large patch of datapoints at a hue of 20 and saturation of 90 - 140 come from the sky as no other colour has as much presence in the photos."
    ]
   },
   {
