The more or less final draft + output videos

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -220,8 +220,12 @@
    "outputs": [],
    "source": [
     "def convert_to_hsv(img):\n",
-    "    \"\"\"Converts given RGB img to hsv format\"\"\"\n",
+    "    \"\"\"Converts given RGB img to HSV format\"\"\"\n",
     "    return cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "def convert_to_rgb(img):\n",
+    "    \"\"\"Converts given HSV img to RGB format\"\"\"\n",
+    "    return cv2.cvtColor(img, cv2.COLOR_HSV2BGR)\n",
     "\n",
     "def calculate_hue_saturation_histogram(hsv_img):\n",
     "    \"\"\"Calculates the histogram for the hue and saturation channels in an HSV image\"\"\"\n",
@@ -234,13 +238,7 @@
     "        plt.imshow(img)\n",
     "    plt.show()\n",
     "\n",
-    "def find_middle_x_value(left, right):\n",
-    "    # Find the middle between the furthest x values between the left and right\n",
-    "    min_left_x = np.min(np.split(left, indices_or_sections=2, axis=1)[0])\n",
-    "    max_right_x = np.max(np.split(right, indices_or_sections=2, axis=1)[0])\n",
-    "    return (max_right_x + min_left_x) / 2\n",
-    "\n",
-    "def group_lines_in_left_right(img, lines):\n",
+    "def group_lines_in_left_right(img, lines, middle_x_value):\n",
     "    \"\"\"\n",
     "    Separate lines into 2 provided numpy arrays, left and right.\n",
     "    This ensures we can pass the correct set of lines to RANSAC so it can extrapolate using the correct data.\n",
@@ -273,8 +271,6 @@
     "    left_points = np.array(left_points)\n",
     "    right_points = np.array(right_points)\n",
     "\n",
-    "    middle_x_value = find_middle_x_value(left_points, right_points)\n",
-    "\n",
     "    # Categorize each pair of points defining horizontal/vertical lines as to the left or right of the middle\n",
     "    for index in range(0, len(other_points) - 1, 2):\n",
     "        point1 = other_points[index]\n",
@@ -284,7 +280,15 @@
     "        else:\n",
     "            right_points = np.append(right_points, [point1, point2], axis=0)\n",
     "\n",
-    "    return left_points, right_points"
+    "    return left_points, right_points\n",
+    "\n",
+    "def create_ransac():\n",
+    "    return linear_model.RANSACRegressor(\n",
+    "        estimator=linear_model.LinearRegression(),\n",
+    "        min_samples=2,\n",
+    "        max_trials=500,\n",
+    "        loss='absolute_error'\n",
+    "    )"
    ]
   },
   {
@@ -358,9 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Pipeline\n",
-    "\n",
-    "The actual pipeline using parameters found from steps above in this section."
+    "### The Pipeline"
    ]
   },
   {
@@ -371,108 +373,112 @@
    },
    "outputs": [],
    "source": [
-    "def image_pipeline(image):\n",
-    "    \"\"\"Yanqi-made image processing pipeline, hope it works :fingers-crossed:\"\"\"\n",
-    "\n",
-    "    raw_image = image\n",
-    "    hsv_image = convert_to_hsv(raw_image)\n",
-    "\n",
-    "    # Colour thresholding (yellow and white)\n",
+    "def colour_thresholding(img, output=False):\n",
     "    # Thresholds in the order: H, S, V\n",
     "    WHITE_LOW_THRESHOLD = (0, 0, 200) \n",
     "    WHITE_HIGH_THRESHOLD = (180, 40, 255)\n",
     "    YELLOW_LOW_THRESHOLD = (90, 110, 0)\n",
     "    YELLOW_HIGH_THRESHOLD = (110, 180, 255)\n",
     "\n",
-    "    white_mask = cv2.inRange(hsv_image, WHITE_LOW_THRESHOLD, WHITE_HIGH_THRESHOLD)\n",
-    "    yellow_mask = cv2.inRange(hsv_image, YELLOW_LOW_THRESHOLD, YELLOW_HIGH_THRESHOLD)\n",
+    "    white_mask = cv2.inRange(img, WHITE_LOW_THRESHOLD, WHITE_HIGH_THRESHOLD)\n",
+    "    yellow_mask = cv2.inRange(img, YELLOW_LOW_THRESHOLD, YELLOW_HIGH_THRESHOLD)\n",
     "\n",
     "    combined_mask = cv2.bitwise_or(white_mask, yellow_mask)\n",
-    "    colour_thresholded_image = cv2.bitwise_and(hsv_image, hsv_image, mask=combined_mask)\n",
-    "    # show_image(convert_to_rgb(colour_thresholded_image))\n",
+    "    colour_thresholded_image = cv2.bitwise_and(img, img, mask=combined_mask)\n",
+    "    if output:\n",
+    "        show_image(convert_to_rgb(colour_thresholded_image))\n",
+    "    return colour_thresholded_image\n",
+    "\n",
+    "def image_pipeline(image, output=False):\n",
+    "    \"\"\"Yanqi-made image processing pipeline, hope it works :fingers-crossed:\"\"\"\n",
+    "    raw_image = image\n",
+    "    hsv_image = convert_to_hsv(raw_image)\n",
+    "\n",
+    "    if output:\n",
+    "        show_image(raw_image)\n",
+    "        show_image(hsv_image)\n",
+    "\n",
+    "    # Colour thresholding (yellow and white)\n",
+    "    colour_thresholded_image = colour_thresholding(hsv_image, output=output)\n",
     "\n",
     "    # Conversion to greyscale\n",
     "    greyscale_image = grayscale(colour_thresholded_image)\n",
-    "    # show_image(greyscale_image, cmap=\"gray\")\n",
+    "    if output:\n",
+    "        show_image(greyscale_image, cmap=\"gray\")\n",
     "\n",
     "    # Smoothing\n",
     "    smoothed_image = gaussian_blur(greyscale_image, 5)\n",
-    "    # show_image(smoothed_image, cmap=\"gray\")\n",
+    "    if output:\n",
+    "        show_image(smoothed_image, cmap=\"gray\")\n",
     "\n",
     "    # Canny edge detection\n",
     "    edge_detect_image = canny(smoothed_image, 100, 100)\n",
-    "    # show_image(edge_detect_image, cmap=\"gray\")\n",
+    "    if output:\n",
+    "        show_image(edge_detect_image, cmap=\"gray\")\n",
     "\n",
     "    # Region of interest filtering\n",
     "    TOP_Y_VALUE = 320\n",
     "    BOTTOM_Y_VALUE = 600\n",
-    "    vertices = np.array([[50, BOTTOM_Y_VALUE], [450, TOP_Y_VALUE], [520, TOP_Y_VALUE], [1000, BOTTOM_Y_VALUE]])\n",
+    "    X1 = 50\n",
+    "    X2 = 450\n",
+    "    X3 = 520\n",
+    "    X4 = 1000\n",
+    "    vertices = np.array([[X1, BOTTOM_Y_VALUE], [X2, TOP_Y_VALUE], [X3, TOP_Y_VALUE], [X4, BOTTOM_Y_VALUE]])\n",
     "    region_of_interest_masked_image = region_of_interest(edge_detect_image, [vertices])\n",
-    "    # show_image(region_of_interest_masked_image, cmap=\"gray\")\n",
+    "    if output:\n",
+    "        show_image(region_of_interest_masked_image, cmap=\"gray\")\n",
     "\n",
     "    # Line segment detection\n",
     "    # According to the docs, rho and theta are the resolution in pixels and radians\n",
     "    line_detected_image, lines = hough_lines(region_of_interest_masked_image, 1, np.pi/180, threshold=8, min_line_len=0, max_line_gap=15)\n",
-    "    # show_image(line_detected_image)\n",
-    "    # show_image(weighted_img(line_detected_image, raw_image))\n",
+    "    if output:\n",
+    "        show_image(line_detected_image)\n",
+    "        show_image(weighted_img(line_detected_image, raw_image))\n",
     "\n",
     "    # Classification into left and right boundaries\n",
-    "    left_points, right_points = group_lines_in_left_right(line_detected_image, lines)\n",
-    "    # for points in [left_points, right_points]:\n",
-    "    #     line_img = np.zeros((line_detected_image.shape[0], line_detected_image.shape[1], 3), dtype=np.uint8)\n",
-    "    #     for index in range(0, len(points) - 1, 2):\n",
-    "    #         point1 = points[index]\n",
-    "    #         point2 = points[index + 1]\n",
-    "    #         cv2.line(line_img, point1, point2, color=[255, 0, 0], thickness=2)\n",
-    "    #     show_image(line_img)\n",
+    "    middle_x_value = (X4 + X1) / 2\n",
+    "    left_points, right_points = group_lines_in_left_right(line_detected_image, lines, middle_x_value)\n",
+    "    if output:\n",
+    "        for points in [left_points, right_points]:\n",
+    "            line_img = np.zeros((line_detected_image.shape[0], line_detected_image.shape[1], 3), dtype=np.uint8)\n",
+    "            for index in range(0, len(points) - 1, 2):\n",
+    "                point1 = points[index]\n",
+    "                point2 = points[index + 1]\n",
+    "                cv2.line(line_img, point1, point2, color=[255, 0, 0], thickness=2)\n",
+    "            show_image(line_img)\n",
     "\n",
     "    # Line fitting\n",
     "    # Use RANSAC on the left and right line segments for it to plot a contiguous line representing the lane markings\n",
-    "    middle_x_value = find_middle_x_value(left_points, right_points)\n",
+    "    def run_ransac(x, y, x1, x2):\n",
+    "        ransac = create_ransac()\n",
+    "        ransac.fit(x, y)\n",
+    "        return ((int(x1), int(ransac.predict([[x1,],])[0][0])), (int(x2), int(ransac.predict([[x2,],])[0][0])))\n",
     "\n",
     "    # Left\n",
-    "    ransac = linear_model.RANSACRegressor(\n",
-    "        estimator=linear_model.LinearRegression(),\n",
-    "        min_samples=5,\n",
-    "        max_trials=100,\n",
-    "        loss='absolute_error',\n",
-    "        random_state=42,\n",
-    "        residual_threshold=10\n",
-    "    )\n",
     "    x, y = np.split(left_points, indices_or_sections=2, axis=1)\n",
-    "    ransac.fit(x, y)\n",
-    "    x1 = int(np.min(x))\n",
-    "    x2 = int(middle_x_value - 50)\n",
-    "    left_line_points = ((x1, int(ransac.predict([[x1,],])[0][0])), (x2, int(ransac.predict([[x2,],])[0][0])))\n",
+    "    left_line_point = run_ransac(x, y, X1, X2)\n",
     "\n",
     "    # Right\n",
-    "    ransac = linear_model.RANSACRegressor(\n",
-    "        estimator=linear_model.LinearRegression(),\n",
-    "        min_samples=5,\n",
-    "        max_trials=100,\n",
-    "        loss='absolute_error',\n",
-    "        random_state=42,\n",
-    "        residual_threshold=10\n",
-    "    )\n",
     "    x, y = np.split(right_points, indices_or_sections=2, axis=1)\n",
-    "    ransac.fit(x, y)\n",
-    "    x1 = int(middle_x_value + 50)\n",
-    "    x2 = int(np.max(x))\n",
-    "    right_line_points = ((x1, int(ransac.predict([[x1,],])[0][0])), (x2, int(ransac.predict([[x2,],])[0][0])))\n",
-    "\n",
+    "    right_line_point = run_ransac(x, y, X3, X4)\n",
+    "    \n",
     "    line_img = np.zeros((line_detected_image.shape[0], line_detected_image.shape[1], 3), dtype=np.uint8)\n",
-    "    cv2.line(line_img, left_line_points[0], left_line_points[1], color=[255, 255, 255], thickness=10)\n",
-    "    cv2.line(line_img, right_line_points[0], right_line_points[1], color=[255, 255, 255], thickness=10)\n",
+    "    for point in [left_line_point, right_line_point]:\n",
+    "        cv2.line(line_img, point[0], point[1], color=[255, 255, 255], thickness=5)\n",
     "\n",
     "    # Output the final image where lanes are drawn on the raw image\n",
     "    lanes_img = weighted_img(line_img, raw_image)\n",
-    "    # show_image(lanes_img)\n",
+    "    if output:\n",
+    "        show_image(lanes_img)\n",
     "    return lanes_img\n",
     "\n",
     "\n",
-    "for file in os.listdir(\"test_images/\"):\n",
-    "    final_result_img = image_pipeline(mpimg.imread(f\"test_images/{file}\"))\n",
-    "    # mpimg.imsave(f\"test_images/{file}_result\", final_result_img)\n"
+    "# for file in os.listdir(\"test_images/\"):\n",
+    "    # final_result_img = image_pipeline(mpimg.imread(f\"test_images/{file}\"))\n",
+    "    # show_image(final_result_img)\n",
+    "    # mpimg.imsave(f\"test_images/{file}_result\", final_result_img)\n",
+    "\n",
+    "final_result_img = image_pipeline(mpimg.imread(\"test_images/solidYellowCurve.jpg\"), output=True)\n"
    ]
   },
   {
